Fix brackets not showing on text sidebar hyperlink

--- a/site/resources/checker.css
+++ b/site/resources/checker.css
@@ -213,11 +213,13 @@ a::after {
 	content: "]]";
 	opacity: 0.7;
 }
-a[target="_blank"]:not(#section-dropdown-sidebar a)::before { 
+a[target="_blank"]:not(#section-dropdown-sidebar a),
+#section-dropdown-sidebar p > a::before { 
 	content: "[";
 	opacity: 0.7;
 }
-a[target="_blank"]:not(#section-dropdown-sidebar a)::after { 
+a[target="_blank"]:not(#section-dropdown-sidebar a),
+#section-dropdown-sidebar p > a::after { 
 	content: "]";
 	opacity: 0.7;
 }
